@@ -1,3 +1,9 @@
+2001-07-02  Jim Blandy  <jimb@redhat.com>
+
+	* dwarf2read.c (read_comp_unit, sibling_die, dump_die,
+	dump_die_list, store_in_ref_table, follow_die_ref): Make these
+	static; they're private functions.
+
 2001-07-01  Mark Elbrecht <snowball@bigfoot.com>
 
 	* coffread.c (coff_symfile_read): Parse DWARF2 info if present.
@@ -94,7 +100,6 @@
 	* coff-solib.c: Include symfile.h and objfiles.h to make
 	OBJF_SHARED visible.
 
->>>>>>> 1.1391
 2001-06-28  Andrew Cagney  <ac131313@redhat.com>
 
 	* configure.in (--enable-gdbmi): Enable by default.
